@@ -203,8 +203,8 @@ petrus
 	LeftRing = ring(RING_OF_POISON_RESISTANCE);
 	RightBoot = PHOENIX_FEATHER boot(BOOT_OF_AGILITY) { Enchantment = 4; }
 	KnownCWeaponSkills = { 4, UNARMED, KICK, BITE, LARGE_SWORDS; }
-	CWeaponSkillHits = { 4, 5000, 5000, 5000, 5000; }
-	RightSWeaponSkillHits = 2000;
+	CWeaponSkillHits = { 4, 2000, 2000, 2000, 2000; }
+	RightSWeaponSkillHits = 1000;
 	PanicLevel = 0;
 	CanBeCloned = false;
 	DefaultName = "Petrus";
@@ -715,6 +715,9 @@ darkknight
 		CapColor = rgb16(48, 48, 48);
 		HairColor = rgb16(32, 32, 32);
 		CanBeConfused = false;
+		FireResistance = 30;
+		ElectricityResistance = 30;
+		EnergyResistance = 30;
 	}
 }
 
@@ -1035,6 +1038,9 @@ skeleton
 		Inventory == wand(WAND_OF_RESURRECTION);
 		CanBeConfused = false;
 		CanRead = true;
+		FireResistance = 100;
+		ElectricityResistance = 100;
+		EnergyResistance = 100;
 	}
 }
 
@@ -1143,6 +1149,9 @@ goblin
 		Inventory = { 5, stone { Chance = 50; }, stone { Chance = 50; }, stone { Chance = 50; }, stone { Chance = 50; }, stone { Chance = 50; } }
 		CanBeConfused = false;
 		HairColorIsSparkling = true;
+		FireResistance = 30;
+		ElectricityResistance = 30;
+		EnergyResistance = 30;
 	}
 }
 
@@ -2106,17 +2115,18 @@ mistress
 		Cloak = SPIDER_SILK cloak { Enchantment = 4; }
 		Belt = DRAGON_HIDE belt { Enchantment = 4; }
 		RightGauntlet = PHOENIX_FEATHER gauntlet(GAUNTLET_OF_DEXTERITY) { Enchantment = 4; }
-		RightBoot = DRAGON_HIDE boot { Enchantment = 4; }
+		RightRing = ring(RING_OF_TELEPORT_CONTROL);
+		LeftRing = ring(RING_OF_TELEPORTATION);
+		RightBoot = DRAGON_HIDE boot(BOOT_OF_KICKING) { Enchantment = 4; }
 		RightWielded = SPIDER_SILK whipofthievery { Enchantment = 5; }
 		LeftWielded = SPIDER_SILK chameleonwhip { Enchantment = 5; }
-		RightRing = ring(RING_OF_FIRE_RESISTANCE);
-		LeftRing = ring(RING_OF_ELECTRICITY_RESISTANCE);
-		CWeaponSkillHits == 5000;
+		KnownCWeaponSkills = { 2, WHIPS, KICK; }
+		CWeaponSkillHits = { 2, 5000, 1000; }
 		RightSWeaponSkillHits = 5000;
 		LeftSWeaponSkillHits = 5000;
 		NameSingular = "mistress queen";
 		PanicLevel = 0;
-		ClassStates = INVISIBLE|HASTE|INFRA_VISION;
+		ClassStates = INVISIBLE|HASTE|INFRA_VISION|ESP;
 		IsCharmable = false;
 		IsUnique = true;
 		DefaultName = "Sherarax";
@@ -2127,6 +2137,9 @@ mistress
 		IsPolymorphable = false;
 		Inventory = { 4, scrolloftaming, scrolloftaming, wand(WAND_OF_HASTE), wand(WAND_OF_HASTE); }
 		CanBeConfused = false;
+		FireResistance = 40;
+		ElectricityResistance = 40;
+		EnergyResistance = 40;
 	}
 }
 
@@ -2286,6 +2299,9 @@ kobold
 		ClothColor = rgb16(144, 0, 144);
 		LegMainColor = rgb16(111, 74, 37);
 		Inventory == wand(WAND_OF_POLYMORPH);
+		FireResistance = 20;
+		ElectricityResistance = 20;
+		EnergyResistance = 20;
 	}
 }
 
@@ -2906,6 +2922,9 @@ orc
 		TotalVolume = 150000;
 		Inventory = { 4, potion { ContainedMaterial = OMMEL_URINE; }, potion { ContainedMaterial = OMMEL_URINE; }, potion { ContainedMaterial = OMMEL_URINE; }, potion { ContainedMaterial = OMMEL_URINE; } }
 		CanBeConfused = false;
+		FireResistance = 30;
+		ElectricityResistance = 30;
+		EnergyResistance = 30;
 	}
 }
 
@@ -3420,7 +3439,7 @@ darkmage
 		DefaultAgility = 21;
 		DefaultEndurance = 15;
 		DefaultPerception = 21;
-		DefaultIntelligence = 20;
+		DefaultIntelligence = 15;
 		DefaultWisdom = 10;
 		DefaultCharisma = 10;
 		DefaultMana = 20;
@@ -3479,7 +3498,7 @@ darkmage
 		DefaultAgility = 15;
 		DefaultEndurance = 15;
 		DefaultPerception = 15;
-		DefaultIntelligence = 40;
+		DefaultIntelligence = 45;
 		DefaultWisdom = 20;
 		DefaultCharisma = 20;
 		DefaultMana = 40;
@@ -3510,7 +3529,7 @@ darkmage
 		DefaultAgility = 12;
 		DefaultEndurance = 15;
 		DefaultPerception = 12;
-		DefaultIntelligence = 50;
+		DefaultIntelligence = 60;
 		DefaultWisdom = 25;
 		DefaultCharisma = 25;
 		DefaultMana = 50;
@@ -3542,6 +3561,9 @@ darkmage
 		CWeaponSkillHits == 500;
 		RightSWeaponSkillHits = 200;
 		LeftSWeaponSkillHits = 200;
+		FireResistance = 40;
+		ElectricityResistance = 40;
+		EnergyResistance = 40;
 	}
 }
 
